; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32h7.c_timer_ker_recalc_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32h7.c_timer_ker_recalc_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.timer_ker = type { i32 }

@base = common dso_local global i64 0, align 8
@RCC_CFGR = common dso_local global i64 0, align 8
@RCC_D2CFGR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64)* @timer_ker_recalc_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @timer_ker_recalc_rate(%struct.clk_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.clk_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.timer_ker*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %10 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %11 = call %struct.timer_ker* @to_timer_ker(%struct.clk_hw* %10)
  store %struct.timer_ker* %11, %struct.timer_ker** %5, align 8
  %12 = load %struct.timer_ker*, %struct.timer_ker** %5, align 8
  %13 = getelementptr inbounds %struct.timer_ker, %struct.timer_ker* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %7, align 4
  %15 = load i64, i64* @base, align 8
  %16 = load i64, i64* @RCC_CFGR, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @readl(i64 %17)
  %19 = ashr i32 %18, 15
  %20 = and i32 %19, 1
  store i32 %20, i32* %6, align 4
  %21 = load i64, i64* @base, align 8
  %22 = load i64, i64* @RCC_D2CFGR, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @readl(i64 %23)
  %25 = load i32, i32* %7, align 4
  %26 = ashr i32 %24, %25
  %27 = and i32 %26, 3
  store i32 %27, i32* %8, align 4
  store i32 2, i32* %9, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp slt i32 %28, 4
  br i1 %29, label %30, label %31

30:                                               ; preds = %2
  store i32 1, i32* %9, align 4
  br label %39

31:                                               ; preds = %2
  %32 = load i32, i32* %6, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i32, i32* %8, align 4
  %36 = icmp sgt i32 %35, 4
  br i1 %36, label %37, label %38

37:                                               ; preds = %34
  store i32 4, i32* %9, align 4
  br label %38

38:                                               ; preds = %37, %34, %31
  br label %39

39:                                               ; preds = %38, %30
  %40 = load i64, i64* %4, align 8
  %41 = load i32, i32* %9, align 4
  %42 = sext i32 %41 to i64
  %43 = mul i64 %40, %42
  ret i64 %43
}

declare dso_local %struct.timer_ker* @to_timer_ker(%struct.clk_hw*) #1

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
